force-app/main/default/objects/Contract_Line__c/Contract_Line__c.object-meta.xml
<CustomObject>
    <label>Ligne de Contrat</label>
    <nameField>
        <displayFormat>LCT-{0000}</displayFormat>
        <label>Numéro ligne</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes de Contrat</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>