force-app/main/default/objects/Contract_Line__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contrat</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Lignes de Contrat</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>