force-app/main/default/objects/Contract_Line__c/fields/Frais_Gestion__c.field-meta.xml
<CustomField>
    <fullName>Frais_Gestion__c</fullName>
    <label>Frais de gestion token</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>