force-app/main/default/objects/Contract_Line__c/fields/Norme_Consommation_30j__c.field-meta.xml
<CustomField>
    <fullName>Norme_Consommation_30j__c</fullName>
    <description
  >Seuil de consommation sur une fenêtre glissante de 30 jours pour cette ligne. Laisser vide pour désactiver la vérification sur cette ligne.</description>
    <label>Norme de consommation (30 jours)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>