force-app/main/default/objects/Contract_Line__c/fields/Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne Opportunité (source)</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Lignes de Contrat</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>