force-app/main/default/objects/Contract_Line__c/fields/Prix_Unitaire__c.field-meta.xml
<CustomField>
    <fullName>Prix_Unitaire__c</fullName>
    <label>Prix unitaire (figé)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>