force-app/main/default/objects/Contract_Line__c/fields/Type_Ligne__c.field-meta.xml
<CustomField>
    <fullName>Type_Ligne__c</fullName>
    <label>Type de ligne</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abonnement</fullName>
            </value>
            <value>
                <fullName>Token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>